# rust-cord

./: Cargo.toml  README.md  test.json
src/: callbacks.rs  channel.rs  client.rs  events.rs  guild_member.rs  lib.rs  loops.rs  message.rs  opcodes.rs
