[package]
name = "rust_cord"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio-tungstenite = { version= "*", features=["rustls-tls"] }
url = "^2.0"

tokio = { version = "1.12.0", features = ["full", "time"] }
tokio-util = { version = "*", features = ["full"] }
tokio-stream = { version = "*" }

bufstream = "0.1.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
futures-util = "*"